# sentiment-dspy

./: .env.example  .gitignore  LICENSE  README.md  build.sh  main.py  poetry.toml  profile copy.example  pyproject.toml  requrements.txt  uv.poetry.txt
doc/: langs-support.md
notebooks/: analysis.py  dspy-intro.ipynb  glm.ipynb  langchain-eval.ipynb  pre-data.ipynb  promp.txt  prompt2.txt  sentiment.ipynb  template.txt  template.v1.in.txt  template.v1.txt  test-4o-mini.ipynb  test-air.ipynb  test-in.ipynb  test_prompt.txt  transfer_lang.py
